fixed background image showing on mobile

--- a/public/src/screens.css
+++ b/public/src/screens.css
@@ -7,13 +7,15 @@
         width:261px;
         height:auto;
     }
-    #side-image{
-        display: none;
-        float:right;
-    }
+    
+}
+#side-image{
+    display: none;
+    float:right;
+
 }
 /*Phones and tablets in Potrait*/
-@media (orientation: potrait) and (max-width: 1007px){
+@media (max-width: 1007px){
     .container.form-container, #page{
         width:auto;
         height:auto;
@@ -31,6 +33,19 @@
         background-size: cover;
         position: fixed;
         left: 0px;
+        display: block;
+        }
+        .text-container{
+            width: 80%;
+            margin: 0px auto;
+            margin-top: 30%;
+            color: #ffffff;
+        }
+        .side-wraper{
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            background-color: #2a66cda8;
         }
         .spinner{
             right: 21%;
@@ -73,6 +88,19 @@
         background-size: cover;
         position: fixed;
         left: 0px;
+        display: block;
+        }
+        .text-container{
+            width: 80%;
+            margin: 0px auto;
+            margin-top: 30%;
+            color: #ffffff;
+        }
+        .side-wraper{
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            background-color: #2a66cda8;
         }
     .container.form-container, #page{
         width: 50%;
